Updated netprofit logic to take average