@@ -1,8 +1,6 @@
 package org.handson.entitites.repositories;
 
 import java.io.FileReader;
-import java.util.ArrayList;
-import java.util.Collections;
 import java.util.Comparator;
 import java.util.HashMap;
 import java.util.List;
@@ -105,7 +103,7 @@ public class CoinRepository {
                 .stream()
                 .sorted(new DescendingComparator())
                 .limit(n)
-                .collect(Collectors.toList());
+                .toList();
 
         MyLogger.customLogger("Top " + n + " Coins:", Constants.INFO_LOGGER);
 
